# dpcreator-script-maker

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
dpcreator_script_maker/: dp_script_maker.py  models.py  static_vals.py
dpcreator_script_maker/test_specs/: spec_01.py  test_spec_01.py
tests/: test_01.py
