[tool.poetry]
name = "dpcreator_script_maker"
version = "0.1.0"
description = "Basic program to create Python scripts based on DP Creator inputs and the OpenDP Library."
# authors = []
# maintainers = []
license = "MIT"
readme = "README.md"
homepage = ""
repository = "https://github.com/opendp/dpcreator-script-maker/"
# documentation = "https://hackersandslackers.com/python-poetry/"
keywords = [
    "Differential Privacy",
    "OpenDP",
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["opendp==0.9.2"]
# build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
# run = "wsgi:main"

[tool.poetry.urls]
issues = "https://github.com/opendp/dpcreator-script-maker/issues"